refactor: 使用Qt5.15.2重构, 确保win7平台的支持

--- a/resource/morose.qrc
+++ b/resource/morose.qrc
@@ -28,5 +28,6 @@
         <file>qml/src/TOFD_PE/compnents/ScanView.qml</file>
         <file>qml/src/TOFD_PE/compnents/qmldir</file>
         <file>qml/src/TOFD_PE/compnents/LinesMask.qml</file>
+        <file>qml/components/common/IconButton.qml</file>
     </qresource>
 </RCC>
