feat: 支持330的A扫文件(.das、.dat)

--- a/resource/morose.qrc
+++ b/resource/morose.qrc
@@ -29,5 +29,6 @@
         <file>qml/src/TOFD_PE/compnents/qmldir</file>
         <file>qml/src/TOFD_PE/compnents/LinesMask.qml</file>
         <file>qml/components/common/IconButton.qml</file>
+        <file>qml/components/common/ComboBox.qml</file>
     </qresource>
 </RCC>
