chore: 完善TOFD/PE工艺参数和报表导出

--- a/resource/morose.qrc
+++ b/resource/morose.qrc
@@ -30,5 +30,6 @@
         <file>qml/src/TOFD_PE/compnents/LinesMask.qml</file>
         <file>qml/components/common/IconButton.qml</file>
         <file>qml/components/common/ComboBox.qml</file>
+        <file>qml/src/TOFD_PE/ParamUI.qml</file>
     </qresource>
 </RCC>
