feat: 添加串口读取330A扫数据

--- a/resource/morose.qrc
+++ b/resource/morose.qrc
@@ -31,5 +31,6 @@
         <file>qml/components/common/IconButton.qml</file>
         <file>qml/components/common/ComboBox.qml</file>
         <file>qml/src/TOFD_PE/ParamUI.qml</file>
+        <file>qml/Communicate.qml</file>
     </qresource>
 </RCC>
