feat: 为优化软件在高DPI显示器下的UI增加控件隐藏和展开listview和ctrl界面

--- a/resource/morose.qrc
+++ b/resource/morose.qrc
@@ -32,5 +32,6 @@
         <file>qml/components/common/ComboBox.qml</file>
         <file>qml/src/TOFD_PE/ParamUI.qml</file>
         <file>qml/Communicate.qml</file>
+        <file>img/arrow.png</file>
     </qresource>
 </RCC>
