--- a/resource/morose.qrc
+++ b/resource/morose.qrc
@@ -44,5 +44,6 @@
         <file>img/help.png</file>
         <file>img/remove.png</file>
         <file>img/usb.png</file>
+        <file>qml/UpdateUI.qml</file>
     </qresource>
 </RCC>
