feat: 添加设置功能，打开和关闭软件升级功能
- 新增设置图标和设置界面
- 在主界面添加设置按钮
- 实现基本的设置功能，包括软件更新设置

--- a/resource/morose.qrc
+++ b/resource/morose.qrc
@@ -45,5 +45,7 @@
         <file>img/remove.png</file>
         <file>img/usb.png</file>
         <file>qml/UpdateUI.qml</file>
+        <file>img/setting.png</file>
+        <file>qml/SettingUI.qml</file>
     </qresource>
 </RCC>
