--- a/resource/morose.qrc
+++ b/resource/morose.qrc
@@ -10,8 +10,8 @@
         <file>qml/components/common/Area.qml</file>
         <file>qml/src/AScan/ControlUI.qml</file>
         <file>qml/src/AScan/MainUI.qml</file>
-        <file>qml/About.qml</file>
-        <file>qml/main.qml</file>
+        <file>qml/AboutWnd.qml</file>
+        <file>qml/MainWnd.qml</file>
         <file>qml/components/common/Toast.qml</file>
         <file>qml/components/common/ToastManager.qml</file>
         <file>img/failed.png</file>
@@ -26,9 +26,9 @@
         <file>qml/src/TOFD_PE/compnents/LinesMask.qml</file>
         <file>qml/components/common/IconButton.qml</file>
         <file>qml/components/common/ComboBox.qml</file>
-        <file>qml/Communicate.qml</file>
+        <file>qml/CommunicateWnd.qml</file>
         <file>img/arrow.png</file>
-        <file>qml/src/TOFD_PE/Help.qml</file>
+        <file>qml/src/TOFD_PE/HelpWnd.qml</file>
         <file>qml/src/OnStart/components/ImageCard.qml</file>
         <file>qml/src/OnStart/components/qmldir</file>
         <file>img/instruments/PXUT-330N/description.md</file>
@@ -44,8 +44,8 @@
         <file>img/help.png</file>
         <file>img/remove.png</file>
         <file>img/usb.png</file>
-        <file>qml/UpdateUI.qml</file>
+        <file>qml/UpdateWnd.qml</file>
         <file>img/setting.png</file>
-        <file>qml/SettingUI.qml</file>
+        <file>qml/SettingWnd.qml</file>
     </qresource>
 </RCC>
