feat(AScan): 新增波门重绘功能
- 添加 GateDrawMask 组件用于波门绘制
- 在 AScanInteractor 中实现波门绘制相关逻辑
- 更新 AScan 控制界面，增加波门重绘相关按钮和选项
- 优化 B/C 扫描视图，支持波门模式

--- a/resource/morose.qrc
+++ b/resource/morose.qrc
@@ -47,5 +47,6 @@
         <file>qml/UpdateWnd.qml</file>
         <file>img/setting.png</file>
         <file>qml/SettingWnd.qml</file>
+        <file>qml/components/common/GateDrawMask.qml</file>
     </qresource>
 </RCC>
