chore(AScan): 添加AScan帮助窗口 QML 文件

--- a/resource/morose.qrc
+++ b/resource/morose.qrc
@@ -48,5 +48,6 @@
         <file>img/setting.png</file>
         <file>qml/SettingWnd.qml</file>
         <file>qml/components/common/GateDrawMask.qml</file>
+        <file>qml/src/AScan/HelpWnd.qml</file>
     </qresource>
 </RCC>
