feat(BScan): 添加6dB法自动计算缺陷功能
    - 新增 DefectListArea 组件用于显示缺陷列表
    - 实现 DefectListModel 类以处理缺陷数据
    - 更新 HelpWnd 文本

--- a/resource/morose.qrc
+++ b/resource/morose.qrc
@@ -49,5 +49,6 @@
         <file>qml/SettingWnd.qml</file>
         <file>qml/components/common/GateDrawMask.qml</file>
         <file>qml/src/AScan/HelpWnd.qml</file>
+        <file>qml/src/AScan/DefectListArea.qml</file>
     </qresource>
 </RCC>
